@@ -1,20 +1,0 @@
-PyTyle is a manual tiling manager that can slide into any EWMH
-compliant window manager, inspired by XMonad. It will allow you to
-enable/disable tiling on a per screen per workspace basis, and
-continually tile your windows.
-
-Features include:
-* Built in multi-monitor support (using Xinerama)
-* Continuous tiling behavior similar to that of XMonad.
-* Manual tiling on a per screen per workspace basis. Have tiling
-  on one screen/workspace and not the other.
-* Comes pre-packaged with a variety of tiling layouts ready for
-  use. Also, PyTyle's object oriented design makes it incredibly easy
-  to add or customize your own tiling layouts.
-* Some configuration options include:
-  * Adding margins on a per-screen basis (to force PyTyle to ignore
-    docks/panels).
-  * Tell PyTyle to ignore certain windows from tiling.
-  * Configure defaults layouts on a per screen per workspace basis.
-  * Completely customize all of PyTyle's key bindings.
-* Dynamically reload configuration file.
