@@ -1,70 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2012/04/08 20:21:58 wiz Exp $
-bin/pytyle
-bin/pytyle-client
-${PYSITELIB}/PyTyle/CHANGELOG
-${PYSITELIB}/PyTyle/Config.py
-${PYSITELIB}/PyTyle/Config.pyc
-${PYSITELIB}/PyTyle/Config.pyo
-${PYSITELIB}/PyTyle/Debug.py
-${PYSITELIB}/PyTyle/Debug.pyc
-${PYSITELIB}/PyTyle/Debug.pyo
-${PYSITELIB}/PyTyle/Desktop.py
-${PYSITELIB}/PyTyle/Desktop.pyc
-${PYSITELIB}/PyTyle/Desktop.pyo
-${PYSITELIB}/PyTyle/Event.py
-${PYSITELIB}/PyTyle/Event.pyc
-${PYSITELIB}/PyTyle/Event.pyo
-${PYSITELIB}/PyTyle/INSTALL
-${PYSITELIB}/PyTyle/LICENSE
-${PYSITELIB}/PyTyle/Probe.py
-${PYSITELIB}/PyTyle/Probe.pyc
-${PYSITELIB}/PyTyle/Probe.pyo
-${PYSITELIB}/PyTyle/README
-${PYSITELIB}/PyTyle/Screen.py
-${PYSITELIB}/PyTyle/Screen.pyc
-${PYSITELIB}/PyTyle/Screen.pyo
-${PYSITELIB}/PyTyle/State.py
-${PYSITELIB}/PyTyle/State.pyc
-${PYSITELIB}/PyTyle/State.pyo
-${PYSITELIB}/PyTyle/TODO
-${PYSITELIB}/PyTyle/Tile.py
-${PYSITELIB}/PyTyle/Tile.pyc
-${PYSITELIB}/PyTyle/Tile.pyo
-${PYSITELIB}/PyTyle/TileState.py
-${PYSITELIB}/PyTyle/TileState.pyc
-${PYSITELIB}/PyTyle/TileState.pyo
-${PYSITELIB}/PyTyle/TileStorage.py
-${PYSITELIB}/PyTyle/TileStorage.pyc
-${PYSITELIB}/PyTyle/TileStorage.pyo
-${PYSITELIB}/PyTyle/Tilers/Cascade.py
-${PYSITELIB}/PyTyle/Tilers/Cascade.pyc
-${PYSITELIB}/PyTyle/Tilers/Cascade.pyo
-${PYSITELIB}/PyTyle/Tilers/Horizontal.py
-${PYSITELIB}/PyTyle/Tilers/Horizontal.pyc
-${PYSITELIB}/PyTyle/Tilers/Horizontal.pyo
-${PYSITELIB}/PyTyle/Tilers/HorizontalRows.py
-${PYSITELIB}/PyTyle/Tilers/HorizontalRows.pyc
-${PYSITELIB}/PyTyle/Tilers/HorizontalRows.pyo
-${PYSITELIB}/PyTyle/Tilers/Maximal.py
-${PYSITELIB}/PyTyle/Tilers/Maximal.pyc
-${PYSITELIB}/PyTyle/Tilers/Maximal.pyo
-${PYSITELIB}/PyTyle/Tilers/TileDefault.py
-${PYSITELIB}/PyTyle/Tilers/TileDefault.pyc
-${PYSITELIB}/PyTyle/Tilers/TileDefault.pyo
-${PYSITELIB}/PyTyle/Tilers/Vertical.py
-${PYSITELIB}/PyTyle/Tilers/Vertical.pyc
-${PYSITELIB}/PyTyle/Tilers/Vertical.pyo
-${PYSITELIB}/PyTyle/Tilers/__init__.py
-${PYSITELIB}/PyTyle/Tilers/__init__.pyc
-${PYSITELIB}/PyTyle/Tilers/__init__.pyo
-${PYSITELIB}/PyTyle/Viewport.py
-${PYSITELIB}/PyTyle/Viewport.pyc
-${PYSITELIB}/PyTyle/Viewport.pyo
-${PYSITELIB}/PyTyle/Window.py
-${PYSITELIB}/PyTyle/Window.pyc
-${PYSITELIB}/PyTyle/Window.pyo
-${PYSITELIB}/PyTyle/__init__.py
-${PYSITELIB}/PyTyle/__init__.pyc
-${PYSITELIB}/PyTyle/__init__.pyo
-${PYSITELIB}/PyTyle/pytylerc
-${PYSITELIB}/${EGG_FILE}
